lab1/Test/L1-A-8-12.cmm
struct {
  int GHGM0zqBJMa [ 1923748765 ] ;
};
struct wjIYGXzLo_Tq {
};
int XxX ( struct O3Kk9kJN Iei , int TQEAJiZxIwIY ) 
  {
  int vG4PzZBJnqw67PP7dijb , hcm2p18kAe2phkP = xgU0fsCiVwSefJcAwGyE 
    = x52Kxd9FGDPd5cj5L55 <= eaS + gzkjY1 / - ! HVo [ 
    wohLQp5dl255 || loUHDVgpgEKUr7 && Zgs2Vq33VFA4c3e 
    != zMV9Zo - cQoLbgiIJkDDhjhouWc / oU3f3a8 ( abhyaosBkl 
    , F6ZTFBf || SrpfaN && iz5CBObMVcSPrKgNkCuV == ShmHvkRA18y9H 
    [ VpHoQ52N * ( qGN8aCDBP77IKWRNa = dGtQxSh0UdKKwC2LejrY 
    >= E7Uj6OHtU0NpakkyDt ) > 525495179.412236290 ] / 
    Hg3BWg ) < 1262357837 * - nD ( ) . NX ] ;
}
float GLLeo8IWaBGZznjU94i 
;
int ;
int ;
int kKHEJQbeND0mwT ( ) {
  if ( jK4O7l_Vd ) {
    while ( r4 )     if ( SKIqZ )     return tvUoL 
      ;
else     G9GfDPsME_Ch0a69Nbx9 ;


  }
}
int awTRt00HpABRro , XbSVU 

;
int ;
int G1fb ( ) {
}
int ;
int n73M8S ( ) {
  SdBkZhtr0KjEH ;
  cfNUT ;
  while ( huNTFEQ ) {
  }
}. 
int ;
int ;
int ;
int ;
int ;
int UTkjuSPEEa7U ( ) {
}
int ;
int ;
int ] ;
int ;
int ;
int I1WYXvbLH9kK ( ) {
}
int W4 ( ) {
  if ( _bE7B_FXjE )   _bfDAkLrmoBg ;
else   if ( cZzD5JaCzjp )   xVWZ6eciClSpw ;


}
int ;
